clusters/cluster/apps/neuland-app/neuland-next-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neuland-next-prod
  namespace: neuland-app
spec:
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: neuland-next-prod
  template:
    metadata:
      labels:
        app: neuland-next-prod
    spec:
      containers:
      - name: neuland-next-prod
        image: ghcr.io/neuland-ingolstadt/neuland.app-native/webapp:0.13.11 # {"$imagepolicy": "flux-system:neuland-next-prod"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 250m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
